@@ -55,6 +55,8 @@
 #include <unistd.h>
 #endif
 
+extern module AP_MODULE_DECLARE_DATA http_module;
+
 static long get_chunk_size(char *);
 
 typedef struct http_filter_ctx {
@@ -1145,8 +1147,11 @@ AP_CORE_DECLARE_NONSTD(apr_status_t) ap_http_header_filter(ap_filter_t *f,
  */
 AP_DECLARE(int) ap_discard_request_body(request_rec *r)
 {
-    apr_bucket_brigade *bb;
+    apr_bucket_brigade *bb, *kept_body = NULL;
+    apr_bucket *e;
     int rv, seen_eos;
+    core_dir_conf *dconf;
+    apr_size_t left = 0;
 
     /* Sometimes we'll get in a state where the input handling has
      * detected an error where we want to drop the connection, so if
@@ -1158,6 +1163,20 @@ AP_DECLARE(int) ap_discard_request_body(request_rec *r)
     if (r->main || r->connection->keepalive == AP_CONN_CLOSE ||
         ap_status_drops_connection(r->status)) {
         return OK;
+    }
+
+    /* We may want to save this body away if the administrator has
+     * asked us to do so for this directory. This allows the body
+     * to be reexamined by filters such as mod_include, even though
+     * the main request has no need for this body.
+     */
+    if (!r->kept_body) {
+        dconf = ap_get_module_config(r->per_dir_config,
+                                     &http_module);
+        if (dconf->keep_body > 0) {
+            left = dconf->keep_body;
+            kept_body = apr_brigade_create(r->pool, r->connection->bucket_alloc);
+        }
     }
 
     bb = apr_brigade_create(r->pool, r->connection->bucket_alloc);
@@ -1211,9 +1230,32 @@ AP_DECLARE(int) ap_discard_request_body(request_rec *r)
                 apr_brigade_destroy(bb);
                 return HTTP_BAD_REQUEST;
             }
+
+            /* If we have been asked to, keep the data up until the
+             * configured limit. If the limit is exceeded, we return an
+             * HTTP_REQUEST_ENTITY_TOO_LARGE response so the caller is
+             * clear the server couldn't handle their request.
+             */
+            if (kept_body) {
+                if (len <= left) {
+                    apr_bucket_copy(bucket, &e);
+                    APR_BRIGADE_INSERT_TAIL(kept_body, e);
+                    left -= len;
+                }
+                else {
+                    apr_brigade_destroy(bb);
+                    apr_brigade_destroy(kept_body);
+                    return HTTP_REQUEST_ENTITY_TOO_LARGE;
+                }
+            }
+            
         }
         apr_brigade_cleanup(bb);
     } while (!seen_eos);
+
+    if (kept_body) {
+        r->kept_body = kept_body;
+    }
 
     return OK;
 }
@@ -1421,3 +1463,101 @@ apr_status_t ap_http_outerror_filter(ap_filter_t *f,
     return ap_pass_brigade(f->next,  b);
 }
 
+typedef struct kept_body_filter_ctx {
+    apr_off_t offset;
+    apr_off_t remaining;
+} kept_body_ctx_t;
+
+/**
+ * Initialisation of filter to handle a kept body on subrequests.
+ * 
+ * If a body is to be reinserted into a subrequest, any chunking will have
+ * been removed from the body during storage. We need to change the request
+ * from Transfer-Encoding: chunked to an explicit Content-Length.
+ */
+int ap_kept_body_filter_init(ap_filter_t *f) {
+    apr_off_t length = 0;
+    request_rec *r = f->r;
+    apr_bucket_brigade *kept_body = r->kept_body;
+
+    if (kept_body) {
+        apr_table_unset(r->headers_in, "Transfer-Encoding");
+        apr_brigade_length(kept_body, 1, &length);
+        apr_table_set(r->headers_in, "Content-Length", apr_off_t_toa(r->pool, length));
+    }
+
+    return OK;
+}
+
+/**
+ * Filter to handle a kept body on subrequests.
+ * 
+ * If a body has been previously kept by the request, and if a subrequest wants
+ * to re-insert the body into the request, this input filter makes it happen.
+ */
+apr_status_t ap_kept_body_filter(ap_filter_t *f, apr_bucket_brigade *b,
+                                 ap_input_mode_t mode, apr_read_type_e block,
+                                 apr_off_t readbytes) {
+    request_rec *r = f->r;
+    apr_bucket_brigade *kept_body = r->kept_body;
+    kept_body_ctx_t *ctx = f->ctx;
+    apr_bucket *ec, *e2;
+    apr_status_t rv;
+
+    /* just get out of the way of things we don't want. */
+    if (!kept_body || (mode != AP_MODE_READBYTES && mode != AP_MODE_GETLINE)) {
+        return ap_get_brigade(f->next, b, mode, block, readbytes);
+    }
+
+    /* set up the context if it does not already exist */
+    if (!ctx) {
+        f->ctx = ctx = apr_palloc(f->r->pool, sizeof(*ctx));
+        ctx->offset = 0;
+        apr_brigade_length(kept_body, 1, &ctx->remaining);
+    }
+
+    /* kept_body is finished, send next filter */
+    if (ctx->remaining <= 0) {
+        return ap_get_brigade(f->next, b, mode, block, readbytes);
+    }
+
+    /* send all of the kept_body, but no more */
+    if (readbytes > ctx->remaining) {
+        readbytes = ctx->remaining;
+    }
+
+    /* send part of the kept_body */
+    if ((rv = apr_brigade_partition(kept_body, ctx->offset, &ec)) != APR_SUCCESS) {
+        ap_log_rerror(APLOG_MARK, APLOG_ERR, rv, r,
+                      "apr_brigade_partition() failed on kept_body at %" APR_OFF_T_FMT, ctx->offset);
+        return rv;
+    }
+    if ((rv = apr_brigade_partition(kept_body, ctx->offset + readbytes, &e2)) != APR_SUCCESS) {
+        ap_log_rerror(APLOG_MARK, APLOG_ERR, rv, r,
+                      "apr_brigade_partition() failed on kept_body at %" APR_OFF_T_FMT, ctx->offset + readbytes);
+        return rv;
+    }
+ 
+    do {
+        apr_bucket *foo;
+        const char *str;
+        apr_size_t len;
+
+        if (apr_bucket_copy(ec, &foo) != APR_SUCCESS) {
+            /* As above; this should not fail since the bucket has
+             * a known length, but just to be sure, this takes
+             * care of uncopyable buckets that do somehow manage
+             * to slip through.  */
+            /* XXX: check for failure? */
+            apr_bucket_read(ec, &str, &len, APR_BLOCK_READ);
+            apr_bucket_copy(ec, &foo);
+        }
+        APR_BRIGADE_INSERT_TAIL(b, foo);
+        ec = APR_BUCKET_NEXT(ec);
+    } while (ec != e2);
+
+    ctx->remaining -= readbytes;
+    ctx->offset += readbytes;
+    return APR_SUCCESS;
+
+}
