@@ -1566,6 +1566,16 @@ static request_rec *make_sub_request(const request_rec *r,
      * until some module interjects and changes the value.
      */
     rnew->used_path_info = AP_REQ_DEFAULT_PATH_INFO;
+    
+    /* Pass on the kept body (if any) into the new request. */
+    rnew->kept_body = r->kept_body;
+
+    /*
+     * Add the KEPT_BODY filter, which will insert any body marked to be
+     * kept for the use of a subrequest, into the subrequest.
+     */
+    ap_add_input_filter_handle(ap_kept_body_input_filter_handle,
+                               NULL, rnew, rnew->connection);
 
     return rnew;
 }
